[metadata]
description-file = README.rst

[nosetests]
verbosity=3
detailed-errors=1
debug=nose.loader

with-doctest=1

with-coverage=1
cover-package=django_statsd

pdb=1
pdb-failures=1

with-django=1
django-settings=tests.settings

#with-tissue=1
#tissue-ignore=W391
#tissue-package=django_utils

[build_sphinx]
source-dir = docs/
build-dir  = docs/_build
all_files  = 1

[upload_sphinx]
upload-dir = docs/_build/html

